<resources>
    <string name="app_name">Buzzle</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="create_new_signup">Create account</string>

    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="FBlogin">Log in with facebook</string>


    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>

    <string name="create_account_message">Don\'t have an account? Sign up.</string>

    <string name="news">News</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="general">GENERAL</string>
    <string name="language_summary">Change your language preference</string>
    <string name="language_preference">Change Language</string>
    <string name="clear_cache">Clear Cache</string>

    <string name="social">SOCIAL</string>
    <string name="social_media_preference">Link to other accounts</string>

    <string name="notifications">NOTIFICATIONS</string>
    <string name="offNotifications">Turn Off Notifications</string>
    <string name="quietHours">Enable Quiet Hours</string>
    <string name="change_notification_sound">Change Notification Sound</string>
    <string name="get_notified_when">Get Notified When: </string>
    <string name="new_follow">Someone follows me </string>
    <string name="new_story">New stories with my tags are posted </string>
    <string name="new_like_on_story">My followers like stories with my tags </string>


    <string name="accountAndPrivacy">ACCOUNT &amp; PRIVACY</string>
    <string name="turn_off_location">Turn Off Location Services</string>
    <string name="make_account_private">Make Account Private</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete Account</string>

    <string name="action_settings">Settings</string>

    <string name="topics">Topics</string>
    <string name="saved_posts">Saved posts</string>
    <string name="settings">Settings</string>
</resources>
