<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general"/>

        <ListPreference
            android:key="language_preference"
            android:title="@string/language_preference"
            android:entries="@array/entries_language_preference"
            android:entryValues="@array/entryValues_language_preference"
            android:summary="@string/language_summary"/>

        <Preference
            android:title="@string/clear_cache"/>
            <intent android:action=""
                android:targetPackage=""
                android:targetClass=""/>
    />

    <PreferenceCategory
        android:title="@string/social" />

        <ListPreference
            android:key="linkSocial_preference"
            android:title="@string/social_media_preference"
            android:entries="@array/entries_link_social_media"
            android:entryValues="@array/entryValues_link_social_media"
            android:summary="@string/language_summary"/>
    />

    <PreferenceCategory
        android:title="@string/notifications" />

        <SwitchPreference
            android:key="turn_off_notifications"
            android:title="@string/offNotifications"
            android:defaultValue="@string/offNotifications"/>

        <CheckBoxPreference
            android:key="enable_quiet_hours"
            android:title="@string/quietHours"
            android:defaultValue="@string/quietHours"/>

        <Preference
            android:title="@string/notification_sound"/>
            <intent android:action=""
                android:targetPackage=""
                android:targetClass=""

         android:title="@string/get_notified_when"/>

            <CheckBoxPreference
                android:key="new_follow"
                android:title="@string/new_follow"
                android:defaultValue="@string/new_follow"/>

            <CheckBoxPreference
                android:key="new_story"
                android:title="@string/new_story"
                android:defaultValue="@string/new_story"/>

            <CheckBoxPreference
                android:key="new_like_on_story"
                android:title="@string/new_like_on_story"
                android:defaultValue="@string/new_story"/>
         />
    />

    <PreferenceCategory
        android:title="@string/accountAndPrivacy" />

        <SwitchPreference
            android:key="turn_off_location"
            android:title="@string/turn_off_location"
            android:defaultValue="@string/turn_off_location"/>

        <CheckBoxPreference
            android:key="make_account_private"
            android:title="@string/make_account_private"
            android:defaultValue="@string/make_account_private"/>

        <Preference
            android:title="@string/reset_password"/>
            <intent android:action=""
                android:targetPackage=""
                android:targetClass=""/>

        <Preference
            android:title="@string/delete_account"/>
            <intent android:action=""
                android:targetPackage=""
                android:targetClass=""/>
    />

</PreferenceScreen>